--- a/simulador.html
+++ b/simulador.html
@@ -19,9 +19,10 @@
 
         body {
             background-color: var(--dark);
+            /* Caminho do fundo corrigido: url('fundo.jpg') */
             background-image: 
                 linear-gradient(to bottom, rgba(2,4,10,0.9), rgba(2,4,10,0.98)),
-                url('img/fundo.jpg');
+                url('fundo.jpg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -124,7 +125,7 @@
 <div class="container">
     <div class="header">
         <div class="logo">
-            <img src="img/logo.png" alt="Legado" onerror="this.style.display='none'">
+            <img src="logo.png" alt="Legado" onerror="this.style.display='none'">
         </div>
         <div class="step-indicator">Catálogo Inteligente</div>
     </div>
