--- a/simulador.html
+++ b/simulador.html
@@ -204,7 +204,7 @@
     
     // CHAVE CORRIGIDA (Nova Chave)
     const MAKE_WEBHOOK = "https://hook.us2.make.com/9qiiocut67o43g4zf6x0wbfriwutqqko";
-    const ZAP_NUMBER = "5511910620140"; // Marcela
+    const ZAP_NUMBER = "5511910620140";
 
     // DATABASE DE PREÇOS (Instalado: Material + Mão de Obra + Margem)
     const catalogo = {
