--- a/simulador.html
+++ b/simulador.html
@@ -283,10 +283,10 @@
         // 1. CONSTRUÇÃO DA MENSAGEM (USANDO TEMPLATE LITERAL E \n)
         const msgTexto = 
 `Olá! Fiz uma cotação no simulador:
-*🏠 Modelo:* ${ultimaCotacao.modelo}
-*📏 Área:* ${ultimaCotacao.metragem}m²
-*🔧 Serviços:* ${ultimaCotacao.extras.join(', ') || 'Padrão'}
-*💰 Valor Estimado:* ${ultimaCotacao.totalFormatado}
+*Modelo:* ${ultimaCotacao.modelo}
+*Área:* ${ultimaCotacao.metragem}m²
+*Serviços:* ${ultimaCotacao.extras.join(', ') || 'Padrão'}
+*Valor Estimado:* ${ultimaCotacao.totalFormatado}
 
 Gostaria de verificar disponibilidade.`;
         
