--- a/simulador.html
+++ b/simulador.html
@@ -282,10 +282,10 @@
         
         // 1. PREPARAÇÃO DA MENSAGEM WHATSAPP (USANDO CONCATENAÇÃO EXPLÍCITA)
         const msgTexto = "Olá! Fiz uma cotação no simulador:\n\n" +
-                         "*🏠 Modelo:* " + ultimaCotacao.modelo + "\n" +
-                         "*📏 Área:* " + ultimaCotacao.metragem + "m²\n" +
-                         "*🔧 Serviços:* " + (ultimaCotacao.extras.join(', ') || 'Padrão') + "\n" +
-                         "*💰 Valor Estimado:* " + ultimaCotacao.totalFormatado + "\n\n" +
+                         "*✅ Modelo:* " + ultimaCotacao.modelo + "\n" +
+                         "*📐 Área:* " + ultimaCotacao.metragem + "m²\n" +
+                         "*🛠️ Serviços:* " + (ultimaCotacao.extras.join(', ') || 'Padrão') + "\n" +
+                         "*💵 Valor Estimado:* " + ultimaCotacao.totalFormatado + "\n\n" +
                          "Gostaria de verificar disponibilidade.";
         
         // CÓDIGO CRÍTICO: Codificação da URL
