--- a/simulador.html
+++ b/simulador.html
@@ -280,12 +280,12 @@
             origem_url: ultimaCotacao.origem_url
         };
         
-        // 1. PREPARAÇÃO DA MENSAGEM WHATSAPP (USANDO CONCATENAÇÃO EXPLÍCITA)
+        // 1. PREPARAÇÃO DA MENSAGEM WHATSAPP (SEM EMOJIS)
         const msgTexto = "Olá! Fiz uma cotação no simulador:\n\n" +
-                         "*✅ Modelo:* " + ultimaCotacao.modelo + "\n" +
-                         "*📐 Área:* " + ultimaCotacao.metragem + "m²\n" +
-                         "*🛠️ Serviços:* " + (ultimaCotacao.extras.join(', ') || 'Padrão') + "\n" +
-                         "*💵 Valor Estimado:* " + ultimaCotacao.totalFormatado + "\n\n" +
+                         "*Modelo:* " + ultimaCotacao.modelo + "\n" +
+                         "*Área:* " + ultimaCotacao.metragem + "m²\n" +
+                         "*Serviços:* " + (ultimaCotacao.extras.join(', ') || 'Padrão') + "\n" +
+                         "*Valor Estimado:* " + ultimaCotacao.totalFormatado + "\n\n" +
                          "Gostaria de verificar disponibilidade.";
         
         // CÓDIGO CRÍTICO: Codificação da URL
